# xqs

./: Makefile.in  README  Readme.md  Resources  TODO  configure  configure.in  xqs.lsm
include/: Prefs.h  xqs.h
lib/: ListTree.c  Makefile  Makefile.in  XgUtils.c  dsimple.c  minus.bm  none.bm  original.bm  plus.bm  x_rotate.c
lib/Xb-1.0/: Makefile  Makefile.in  README  SelectInputTree.c  XFetchClass.c  Xb.h  XbCursor.c  XbEvent.c  XbText.c  config.cache  config.status  configure  configure.in
src/: AccessTab.c  ClientsTab.c  DisplayTab.c  KeyboardTab.c  Makefile  Makefile.in  Menu.c  Prefs.c  PropertiesTab.c  ResourcesTab.c  WinTree.c  WindowTab.c  main.c  misc.c
src/tmp/: EventTab.c  eventInfo.c  res.c
